--- a/lec45-drag-drop-file/index.html
+++ b/lec45-drag-drop-file/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <title>Drag Drop Api file Exercise</title>
 </head>
 <body>
@@ -11,6 +12,7 @@
     <form action="" class="form" method="POST" enctype="multipart/form-data">
       <input type="file" class="hide" id="file" name="file" multiple>
       <div id="drop-zone" class="drop-zone">
+        <i class="fas fa-file-upload icon-upload"></i>
         <p class="drop-zone__text">
           Drop file or click to upload file
         </p>
